--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,10 @@
   "description": "This is the api for the backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["api", "mongoose"],
+  "author": "Emmy-Akintz",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
