--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": ["api", "mongoose"],
+  "keywords": [
+    "api",
+    "mongoose"
+  ],
   "author": "Emmy-Akintz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.3.0"
   }
 }
