--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint . --ext .js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   },
   "keywords": [
     "api",
@@ -20,5 +25,12 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.3.0",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
+    "globals": "^16.2.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.0"
   }
 }
