--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "lint": "eslint . --ext .js",
+    "lint": "eslint --ext .js --fix",
     "prepare": "husky install"
   },
   "lint-staged": {
