--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "lint": "eslint --ext .js --fix",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.js": "eslint --fix"
+    "lint": "eslint --ext .js --fix"
   },
   "keywords": [
     "api",
@@ -29,8 +25,6 @@
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "eslint": "^9.27.0",
-    "globals": "^16.2.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.0"
+    "globals": "^16.2.0"
   }
 }
