--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-node_modules
+node_modules/
+frontend/node_modules/
+backend/node_modules/
 
 package-lock.json
+frontend/package-lock.json
+backend/package-lock.json
