--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules/
 frontend/node_modules/
 backend/node_modules/
 
-package-lock.json
+# package-lock.json
 frontend/package-lock.json
 backend/package-lock.json
