--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "npm install --prefix frontend && npm install --prefix backend",
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\""
   },
   "lint-staged": {
     "frontend/**/*.{js,jsx,ts,tsx}": [
@@ -28,6 +30,7 @@
   },
   "homepage": "https://github.com/Emmy-Akintz/mern-blog-site#readme",
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "eslint": "^9.27.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0"
