--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "axios": "^1.6.8",
     "formik": "^2.4.6",
     "quill": "^2.0.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.5.0",
@@ -29,6 +32,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^16.2.0",
     "vite": "^6.3.5"
   }
 }
