--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.77.2",
     "@tanstack/react-query-devtools": "^5.32.0",
     "axios": "^1.6.8",
@@ -17,8 +18,10 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.1",
+    "tailwindcss": "^4.1.8",
     "yup": "^1.4.0"
   },
   "devDependencies": {
