--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,14 @@
   "author": "Emmy-Akintz",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.3.0",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
